# systray

./: Cargo.toml  LICENSE  PKGBUILD  README.md  tray.1
src/: main.rs
src/cli/: mod.rs
src/daemon/: manager.rs  mod.rs  socket.rs  watcher.rs
src/protocol/: mod.rs
src/sni/: icon.rs  item.rs  mod.rs
