[package]
name = "systray"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = "4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
resvg = "0.44"
usvg = "0.44"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
libc = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
